--- a/shield_agent.services.yml
+++ b/shield_agent.services.yml
@@ -1,12 +1,12 @@
 services:
   shield_agent.request_subscriber:
     class: Drupal\shield_agent\EventSubscriber\RequestSubscriber
-    arguments: ['@current_route_match', '@config.factory', '@router.admin_context', '@current_user', '@url_generator']
+    arguments: ['@current_route_match', '@config.factory', '@router.admin_context', '@current_user']
     tags:
       - { name: event_subscriber }
   shield_agent.http_4xx_conversion:
     class: Drupal\shield_agent\EventSubscriber\Http4xxExceptionSubscriber
-    arguments: ['@config.factory', '@current_user', '@url_generator']
+    arguments: ['@config.factory', '@current_user']
     tags:
       - { name: event_subscriber }
   shield_agent.http_basicauth_middlware:
